--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "xyctp",
-  "version": "1.1.1",
+  "name": "xyctp_test",
+  "version": "1.1.2",
   "description": "ctp lib based on nodejs",
   "author": "weilee",
   "license": "MIT",
